# algolia-index

./: Cargo.toml  build_indexer.sh  build_search.sh  test.json
benches/indexing/: gram_size.rs  product_amount.rs
benches/searching/: by_gram_size.rs  by_query_len.rs
src/: bench.rs  lib.rs  main.rs  ngramindex.rs  ngramindex2.rs  ngramindexconstructor.rs  preprocessor.rs  product.rs  serde_array.rs
src/classic_indexes/: categorical.rs  mod.rs  order.rs  tag.rs
src/data/: container.rs  features.rs  mod.rs  product.rs  raw_parser.rs  tags.rs  vendor.rs
src/js_interactable/: category_handler.rs  feature_filter.rs  mod.rs  product_producer.rs  tag_handler.rs
src/ngram/: index.rs  indexer.rs  mod.rs  result_ranker.rs
src/serialize/: all_indexes.rs  collection_serializable.rs  collections.rs  item_serializable.rs  mod.rs  nodes.rs  primitives.rs  pub trait IndexSerializer.rs  sequential_array.rs  traits.rs
tests/: index_size_by_ngram.rs  index_size_pr_product.rs
