[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "indexer_lib"
crate-type = ["cdylib", "lib"]

[dependencies]
ahash = { version = "0.7.6", features = ["serde"] }
bencher = "0.1.5"
colosseum = "0.2.2"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.57"
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
wasm-bindgen = "0.2.79"

[dev-dependencies]
wasm-bindgen-test = "0.3"
rand = "0.8.5"

[profile.release]
lto = true
opt-level = 'z'
# opt-level = 3
debug = false
strip = true
codegen-units = 1

[profile.bench]
opt-level = 3

[[bench]]
name = "indexing_based_on_gram_size"
path = "./benches/indexing/gram_size.rs"
harness = false

[[bench]]
name = "indexing_based_on_product_amount"
path = "./benches/indexing/product_amount.rs"
harness = false

[[bench]]
name = "searching_by_query_len"
path = "./benches/searching/by_query_len.rs"
harness = false

[[bench]]
name = "searching_by_gram_size"
path = "./benches/searching/by_gram_size.rs"
harness = false
